contact.css
body {
  background-color: #96c074;
  color: #000000;
  font-family: Cambria;
  line-height: 1.6;
  margin: 20px;
  padding: 10px;
  font-size: 1.3em;
  text-align: center;
}

h1 {
  color: #000000;
  font-size: 2.5em;
  margin-bottom: 10px;
  border-top: #155424 6px solid; 
  border-bottom: #155424 6px solid; 
}

.box {
  float: center;
  width: fit-content;
  background-color:#60b818;
  border-radius: 100px;
  box-shadow: 0 8px 12px #75e01d;
}
  
img {
  border-radius: 45px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.night-mode {
  background-color: #37591b;
  color: #edf0eb;
}

#toggle-mode {
  padding: 10px;
  margin-top: 10px;
  background: #a2eb67;
  color: #000000;
  border-radius: 14px;
  cursor: pointer;
  font-family: Georgia;
  font-size: 15px;
  width: 25%;
}

#toggle-mode:hover {
  background: #b4f084;
  color: #000000;
}

#about-page {padding: 10px;
  margin-top: 10px;
  background: #a2eb67;
  color: #000000;
  border-radius: 14px;
  cursor: pointer;
  font-family: Georgia;
  font-size: 15px;
  width: 25%;
}

#about-page:hover {
  background: #b4f084;
  color: #000000;
}

#resume-page {padding: 10px;
  margin-top: 10px;
  background: #a2eb67;
  color: #000000;
  border-radius: 14px;
  cursor: pointer;
  font-family: Georgia;
  font-size: 15px;
  width: 25%;
}

#resume-page:hover {
  background: #b4f084;
  color: #000000;
}

#home-page {padding: 10px;
  margin-top: 10px;
  background: #a2eb67;
  color: #000000;
  border-radius: 14px;
  cursor: pointer;
  font-family: Georgia;
  font-size: 15px;
  width: 25%;
}

#home-page:hover {
  background: #b4f084;
  color: #000000;
}

#contact-page {padding: 10px;
  margin-top: 10px;
  background: #a2eb67;
  color: #000000;
  border-radius: 14px;
  cursor: pointer;
  font-family: Georgia;
  font-size: 15px;
  width: 25%;
}

#contact-page:hover {
  background: #b4f084;
  color: #000000;
}

